# Machine-Learn-Bar

actix-backend/: Cargo.toml
actix-backend/src/: main.rs
actix-backend/src/db/: mod.rs
actix-backend/src/routes/: user.rs
actix-backend/src/structures/: base_responser.rs  mod.rs  user_body.rs
actix-backend/src/utils/: md5.rs
angular-frontend/: angular.json  package-lock.json  package.json  proxy.config.json
angular-frontend/src/: index.html  styles.sass
angular-frontend/src/app/: app-routing.module.ts  app.component.ts  app.module.ts
angular-frontend/src/app/routes/sessions/login/login/: login.component.html  login.component.sass  login.component.ts
